[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Graphics/UI/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/Fonts/menuBig.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/MenuScreen.gd" type="Script" id=4]

[node name="MenuScreen" type="TextureRect"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 300.0
custom_constants/margin_top = 160
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2"]
margin_top = 171.0
margin_right = 1920.0
margin_bottom = 288.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Menu"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -229.5
margin_right = 743.0
margin_bottom = 933.5
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 972.0
margin_bottom = 1143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 952.0
margin_bottom = 221.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Continue"
expand_icon = true

[node name="RestartLevelButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 225.0
margin_right = 952.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Restart Level"
expand_icon = true

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 952.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 676.0
margin_right = 952.0
margin_bottom = 897.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Quit to Title Screen"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 901.0
margin_right = 952.0
margin_bottom = 1123.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Quit to Desktop"
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartLevelButton" to="." method="_on_RestartLevelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
